# datum

./: CMakeLists.txt  Cargo.toml  README.md
include/: newtype.h
src/: CMakeLists.txt  main.cpp  main.rs
